ambiente em kubernetes/app-nodejs.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: express
  namespace: desafio-devops
spec:
  selector:
    app: express # servico para o APP em Node.js
  ports:
    - name: http
      port: 3000
  type: ClusterIP # será em clusterip, pois utilizaremos o método: ingress, para acesso da aplicação
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express
  namespace: desafio-devops
spec:
  selector:
    matchLabels:
      app: express
  replicas: 2 # para uma maior resiliencia, escolhi inserir dois pods
  template: 
    metadata:
      labels:
        app: express
    spec:
      containers:
      - name: express
        image: gabryelziinnnnn/desafio-devops:v1
        readinessProbe: # por padrão terá um delay de 10 segundos para que o container fique pronto (necessário para uso do HPA)          
          httpGet: 
            path: /
            port: 3000     
        resources:
          requests: # estabeleci valores aleatórios de request e limits para um QOS Guaranteed
            memory: 200Mi 
            cpu: 50m 
          limits:
            cpu: 400m
            memory: 400Mi
