ambiente em kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express
  namespace: desafio-devops
spec:
  rules:
    - host: # a prática mais recomendada é inserir um host com wildcard aqui
      http:
        paths:
          - backend:
              service:
                name: express
                port:
                  number: 3000
            path: /
            pathType: Prefix
